# CppEngine2D

./: .gitignore  CMakeLists.txt  CppEngine2D.sln  README.md
CppEngine2D/: CppEngine2D.vcxproj  CppEngine2D.vcxproj.filters
CppEngine2D/.opencppcov/enginecpp/: Debug_x64.json
CppEngine2D/include/: game.h  game.hpp
CppEngine2D/include/engine/: draw_manager.h  draw_manager.hpp  event.h  event.hpp  game_clock.h  game_clock.hpp  game_object.h  game_object.hpp  input.h  input.hpp  physics_manager.h  physics_manager.hpp  texture_mananger.h  texture_mananger.hpp  update_manager.h  update_manager.hpp
CppEngine2D/include/engine/gfx/: image_info.h  renderer.h  renderer.hpp  sprite.h  sprite.hpp  texture.h  texture.hpp
CppEngine2D/include/engine/physics/: bounding_box.h  bounding_box.hpp  collision_info.h  collision_info.hpp  rigid_body.h  rigid_body.hpp
CppEngine2D/include/frogger/: map.h  map.hpp
CppEngine2D/include/frogger/actors/: background.h  background.hpp  bg_water.h  bg_water.hpp  obstacle.h  obstacle.hpp  player.h  player.hpp  wood_log.h
CppEngine2D/include/math/: vector2.h  vector2.hpp  vector3.h  vector4.h
CppEngine2D/include/utility/: timer.h  types.h  types.hpp
CppEngine2D/src/: my_main.cpp
CppEngine2D/src/engine/: draw_manager.cpp  event.cpp  game_clock.cpp  game_object.cpp  input.cpp  physics_manager.cpp  texture_manager.cpp  update_manager.cpp
CppEngine2D/src/engine/gfx/: image_info.cpp  renderer.cpp  sprite.cpp  texture.cpp
CppEngine2D/src/engine/physics/: bounding_box.cpp  rigid_body.cpp
CppEngine2D/src/frogger/: game.cpp  map.cpp
CppEngine2D/src/frogger/actors/: background.cpp  bg_water.cpp  obstacle.cpp  player.cpp  wood_log.cpp
CppEngine2D/src/math/: vector2.cpp  vector3.cpp  vector4.cpp
CppEngine2D/src/utilities/: timer.cpp
dependencies/: CMakeLists.txt
src/: main.cpp
src/engine/: draw_manager.cpp  draw_manager.hpp  event.cpp  event.hpp  game_clock.cpp  game_clock.hpp  game_object.cpp  game_object.hpp  input.cpp  input.hpp  physics_manager.cpp  physics_manager.hpp  texture_manager.cpp  texture_manager.hpp  update_manager.cpp  update_manager.hpp
src/engine/gfx/: image_info.cpp  renderer.cpp  renderer.hpp  sprite.cpp  sprite.hpp  surface.hpp  texture.cpp  texture.hpp
src/engine/physics/: bounding_box.cpp  bounding_box.hpp  collision_info.hpp  rigid_body.cpp  rigid_body.hpp
src/frogger/: game.cpp  game.hpp  map.cpp  map.hpp
src/frogger/actors/: background.cpp  background.hpp  bg_water.cpp  bg_water.hpp  obstacle.cpp  obstacle.hpp  player.cpp  player.hpp  wood_log.cpp  wood_log.hpp
src/math/: vector2.cpp  vector2.hpp
src/utilities/: timer.cpp  timer.hpp
